--- a/client/src/PopupEdit.css
+++ b/client/src/PopupEdit.css
@@ -79,6 +79,7 @@
 .popup-edit .btn-save {
 	align-self: center;
 	width: 100px;
+	min-height: 25px;
 	padding: 3px 5px;
 	border: none;
 	border-radius: 5px;
@@ -93,6 +94,27 @@
 }
 
 .popup-edit .btn-save:hover {
+	background-color: #a4c1c3;
+}
+
+.popup-edit .btn-delete {
+	align-self: center;
+	width: 100px;
+	min-height: 25px;
+	padding: 3px 5px;
+	border: none;
+	border-radius: 5px;
+	outline: none;
+	background-color: #b7d7d9;
+	font-family: 'Noto Sans', sans-serif;
+	font-size: 14px;
+	font-weight: bold;
+	text-align: center;
+	cursor: pointer;
+	transition: .2s;
+}
+
+.popup-edit .btn-delete:hover {
 	background-color: #a4c1c3;
 }
 
